[package]
name = "edhex"
version = "0.2.8"
authors = ["John Baber-Lucero <cargo@frundle.com>"]
license = "GPL-3.0"
description = "Hex editor that works vaguely like ed"
homepage = "https://github.com/jbaber/edhex"
repository = "https://github.com/jbaber/edhex"
readme = "README.md"
edition = "2018"

[dependencies]
regex = "1.4.5"
ansi_term = "0.12.1"
unicode-segmentation = "1.6.0"
