[package]
name = "edhex"
version = "0.3.13"
authors = ["John Baber-Lucero <cargo@frundle.com>"]
license = "GPL-3.0"
description = "Hex editor that works vaguely like ed"
homepage = "https://github.com/jbaber/edhex"
repository = "https://github.com/jbaber/edhex"
readme = "README.md"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
edhex_core = { path = "../edhex_core", version = "0.6.1" }
regex = "1.4.5"
clap = "2.27.0"
